// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List: Component should render correctly 1`] = `
<styled.div>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
    title="Projects Overview"
  />
  <TopHeader
    headerSubtitle="Overview"
    headerTitle="Projects"
    secondaryMenuItems={
      Array [
        Object {
          "id": "logoutBtn",
          "label": "Log Out",
          "to": "/logout",
        },
        Object {
          "id": "userBtn",
          "label": "Users",
          "to": "/user",
        },
      ]
    }
  />
  <ContextHeader
    subtitle="Overview"
    title="Projects"
  >
    <PlusButton
      id="addProjectDesktopBtn"
      onClick={[Function]}
    />
  </ContextHeader>
  <LoaderWrapper
    loading={false}
    noData={false}
    noDataContent="No Projects"
  >
    <styled.ul>
      <styled.li
        key="0"
      >
        <Component
          headerComponent={
            <ForwardRef(styled.ul)>
              <ForwardRef(styled.li)
                id="headerItem-0"
              >
                3 months ago
              </ForwardRef(styled.li)>
              <ForwardRef(styled.li)
                id="headerItem-1"
              >
                In Progress
              </ForwardRef(styled.li)>
              <ForwardRef(styled.li)
                id="headerItem-2"
              >
                Sed sed risus a nibh Maecenas nec pulvinar ex
              </ForwardRef(styled.li)>
            </ForwardRef(styled.ul)>
          }
        >
          <H1
            customStyles={
              Object {
                "cursor": "pointer",
              }
            }
            id="projectName-0"
            onClick={[Function]}
          >
            Project Name
          </H1>
          <styled.div
            onClick={[Function]}
          >
            <P
              id="projectDescription-0"
            >
              Description
            </P>
          </styled.div>
          <Span
            customStyles={
              Object {
                "display": "block",
                "fontSize": "12px",
                "overflow": "hidden",
                "textOverflow": "ellipsis",
                "whiteSpace": "nowrap",
                "width": "100%",
              }
            }
            id="apiPath-0"
          >
            schemacms/api/project_title
          </Span>
        </Component>
      </styled.li>
      <styled.li
        key="1"
      >
        <Component
          headerComponent={
            <ForwardRef(styled.ul)>
              <ForwardRef(styled.li)
                id="headerItem-0"
              >
                3 months ago
              </ForwardRef(styled.li)>
              <ForwardRef(styled.li)
                id="headerItem-1"
              >
                Published
              </ForwardRef(styled.li)>
              <ForwardRef(styled.li)
                id="headerItem-2"
              >
                Tadeusz Kosciuszko
              </ForwardRef(styled.li)>
            </ForwardRef(styled.ul)>
          }
        >
          <H1
            customStyles={
              Object {
                "cursor": "pointer",
              }
            }
            id="projectName-1"
            onClick={[Function]}
          >
            Honec sodales libero non fermentum aliquam
          </H1>
          <styled.div
            onClick={[Function]}
          >
            <P
              id="projectDescription-1"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed molestie fermentum dictum. In id posuere nibh.
            </P>
          </styled.div>
          <Span
            customStyles={
              Object {
                "display": "block",
                "fontSize": "12px",
                "overflow": "hidden",
                "textOverflow": "ellipsis",
                "whiteSpace": "nowrap",
                "width": "100%",
              }
            }
            id="apiPath-1"
          >
            schemacms/api/wuwhonec-sodales-libero-non-fermentum-aliquam-honec-sodales-libero-non-fermentum-aliquam
          </Span>
        </Component>
      </styled.li>
    </styled.ul>
  </LoaderWrapper>
  <NavigationContainer
    hideOnDesktop={true}
    right={true}
  >
    <PlusButton
      id="addProjectBtn"
      onClick={[Function]}
    />
  </NavigationContainer>
</styled.div>
`;

exports[`List: Component should render correctly with loading 1`] = `
<styled.div>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
    title="Projects Overview"
  />
  <TopHeader
    headerSubtitle="Overview"
    headerTitle="Projects"
    secondaryMenuItems={
      Array [
        Object {
          "id": "logoutBtn",
          "label": "Log Out",
          "to": "/logout",
        },
        Object {
          "id": "userBtn",
          "label": "Users",
          "to": "/user",
        },
      ]
    }
  />
  <ContextHeader
    subtitle="Overview"
    title="Projects"
  >
    <PlusButton
      id="addProjectDesktopBtn"
      onClick={[Function]}
    />
  </ContextHeader>
  <LoaderWrapper
    loading={true}
    noData={false}
    noDataContent="No Projects"
  >
    <styled.ul>
      <styled.li
        key="0"
      >
        <Component
          headerComponent={
            <ForwardRef(styled.ul)>
              <ForwardRef(styled.li)
                id="headerItem-0"
              >
                3 months ago
              </ForwardRef(styled.li)>
              <ForwardRef(styled.li)
                id="headerItem-1"
              >
                In Progress
              </ForwardRef(styled.li)>
              <ForwardRef(styled.li)
                id="headerItem-2"
              >
                Sed sed risus a nibh Maecenas nec pulvinar ex
              </ForwardRef(styled.li)>
            </ForwardRef(styled.ul)>
          }
        >
          <H1
            customStyles={
              Object {
                "cursor": "pointer",
              }
            }
            id="projectName-0"
            onClick={[Function]}
          >
            Project Name
          </H1>
          <styled.div
            onClick={[Function]}
          >
            <P
              id="projectDescription-0"
            >
              Description
            </P>
          </styled.div>
          <Span
            customStyles={
              Object {
                "display": "block",
                "fontSize": "12px",
                "overflow": "hidden",
                "textOverflow": "ellipsis",
                "whiteSpace": "nowrap",
                "width": "100%",
              }
            }
            id="apiPath-0"
          >
            schemacms/api/project_title
          </Span>
        </Component>
      </styled.li>
      <styled.li
        key="1"
      >
        <Component
          headerComponent={
            <ForwardRef(styled.ul)>
              <ForwardRef(styled.li)
                id="headerItem-0"
              >
                3 months ago
              </ForwardRef(styled.li)>
              <ForwardRef(styled.li)
                id="headerItem-1"
              >
                Published
              </ForwardRef(styled.li)>
              <ForwardRef(styled.li)
                id="headerItem-2"
              >
                Tadeusz Kosciuszko
              </ForwardRef(styled.li)>
            </ForwardRef(styled.ul)>
          }
        >
          <H1
            customStyles={
              Object {
                "cursor": "pointer",
              }
            }
            id="projectName-1"
            onClick={[Function]}
          >
            Honec sodales libero non fermentum aliquam
          </H1>
          <styled.div
            onClick={[Function]}
          >
            <P
              id="projectDescription-1"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed molestie fermentum dictum. In id posuere nibh.
            </P>
          </styled.div>
          <Span
            customStyles={
              Object {
                "display": "block",
                "fontSize": "12px",
                "overflow": "hidden",
                "textOverflow": "ellipsis",
                "whiteSpace": "nowrap",
                "width": "100%",
              }
            }
            id="apiPath-1"
          >
            schemacms/api/wuwhonec-sodales-libero-non-fermentum-aliquam-honec-sodales-libero-non-fermentum-aliquam
          </Span>
        </Component>
      </styled.li>
    </styled.ul>
  </LoaderWrapper>
  <NavigationContainer
    hideOnDesktop={true}
    right={true}
  >
    <PlusButton
      id="addProjectBtn"
      onClick={[Function]}
    />
  </NavigationContainer>
</styled.div>
`;

exports[`List: Component should render without data 1`] = `
<styled.div>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
    title="Projects Overview"
  />
  <TopHeader
    headerSubtitle="Overview"
    headerTitle="Projects"
    secondaryMenuItems={
      Array [
        Object {
          "id": "logoutBtn",
          "label": "Log Out",
          "to": "/logout",
        },
        Object {
          "id": "userBtn",
          "label": "Users",
          "to": "/user",
        },
      ]
    }
  />
  <ContextHeader
    subtitle="Overview"
    title="Projects"
  >
    <PlusButton
      id="addProjectDesktopBtn"
      onClick={[Function]}
    />
  </ContextHeader>
  <LoaderWrapper
    loading={false}
    noData={true}
    noDataContent="No Projects"
  >
    <styled.ul />
  </LoaderWrapper>
  <NavigationContainer
    hideOnDesktop={true}
    right={true}
  >
    <PlusButton
      id="addProjectBtn"
      onClick={[Function]}
    />
  </NavigationContainer>
</styled.div>
`;
